# slice

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NIX_IMPROVEMENTS.md  README.md  SECURITY.md  flake.nix  install.ps1  install.sh  release.toml
.devcontainer/: devcontainer.json  on-create.sh
.github/: FUNDING.yml
.github/actions/cache-cargo/: action.yml
.github/workflows/: bench.yml  build_nix.yml  changelog.yml  docker.yml  format.yml  install-test.yml  pages.yml  publish.yml  release-prep.yml  release.yml  rust-clippy.yml  test.yml
docs/: cheatsheet.toml  robots.txt  style.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential.rs  range_parser.rs  structured.rs  unescape.rs
fuzz/src/: lib.rs
src/: cli.rs  ext.rs  iterator.rs  lib.rs  main.rs  range.rs  run.rs
src/ext/: buf_read.rs  grapheme.rs  iterator.rs  utf8.rs
tests/: cli.rs
tests/cmd/: basic_bare_minus_step_rejected.stderr  basic_bare_minus_step_rejected.toml  basic_bare_number_errors.stderr  basic_bare_number_errors.toml  basic_bounded_step.toml  basic_empty_range.toml  basic_excess_colon_parts_rejected.stderr  basic_excess_colon_parts_rejected.stdin  basic_excess_colon_parts_rejected.toml  basic_extended_plus_minus_saturating.toml  basic_extended_plus_minus_window.toml  basic_extended_plus_window.toml  basic_headers_printed_when_range_empty.stdout  basic_headers_printed_when_range_empty.toml  basic_invalid_range_value.stderr  basic_invalid_range_value.toml  basic_line_blank_lines_in_middle.toml  basic_line_crlf_last_line_no_newline.toml  basic_line_crlf_preserved.stdin  basic_line_crlf_preserved.toml  basic_line_empty_input.toml  basic_line_file_unbounded_last_no_newline.toml  basic_line_last_line_no_newline_selected.stdin  basic_line_last_line_no_newline_selected.toml  basic_line_no_trailing_newline_full.stdout  basic_missing_file_continues_to_next.stdout  basic_missing_file_continues_to_next.toml  basic_missing_file_skips_header.stderr  basic_missing_file_skips_header.stdout  basic_missing_file_skips_header.toml  basic_missing_input_file.toml  basic_multiple_ranges.stdout  basic_multiple_ranges.toml  basic_multiple_ranges_backward_rejected.stderr  basic_multiple_ranges_backward_rejected.toml  basic_multiple_ranges_empty_middle.stdin  basic_multiple_ranges_empty_middle.toml  basic_multiple_ranges_empty_prefix.toml  basic_multiple_ranges_empty_range.toml  basic_multiple_ranges_overlap_rejected.stderr  (+387 more)
tests/cmd/basic_missing_file_continues_to_next.in/: c.txt
tests/cmd/basic_step_two_files.in/: a.txt  b.txt
tests/cmd/basic_three_files_headers_in_order.in/sub/: c.txt
tests/cmd/option_delimiter_multifile_headers.in/: e.txt
tests/cmd/option_delimiter_negative_tail_file.in/: a.txt
tests/cmd/option_delimiter_step_two_straddle.in/: a.txt
tests/cmd/option_l_multi_file_quiet_suppresses_headers.in/: a.txt
tests/cmd/option_q_suppresses_headers_two_files.in/: b.txt
xtask/: Cargo.toml
xtask/src/: cheatsheet.rs  check.rs  gen.rs  main.rs
xtask/templates/: cheatsheet.html  llms.txt
