[package]
name = "slice-command"
version = "0.4.2"
edition = "2021"
authors = ["ChanTsune"]
license = "Apache-2.0 OR MIT"
description = "slice is a command-line tool that allows you to slice the contents of a file using syntax similar to Python's slice notation."
readme = "README.md"
repository = "https://github.com/ChanTsune/slice.git"
categories = ["text-processing", "command-line-utilities"]
keywords = ["text", "utility", "tool"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.28", features = ["derive"] }

[[bin]]
name = "slice"
path = "src/main.rs"
