[package]
name = "slice-command"
version = "0.4.3"
edition = "2021"
authors = ["ChanTsune"]
license = "Apache-2.0 OR MIT"
description = "slice is a command-line tool that allows you to slice the contents of a file using syntax similar to Python's slice notation."
readme = "README.md"
repository = "https://github.com/ChanTsune/slice.git"
categories = ["text-processing", "command-line-utilities"]
keywords = ["text", "utility", "tool"]
rust-version = "1.85"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "2.3.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
memchr = "2.8.1"
thiserror = "2.0.18"

[[bin]]
name = "slice"
path = "src/main.rs"

[dev-dependencies]
trycmd = "1.1"

# cargo-binstall resolves assets by crate name by default; the release assets
# are named after the binary ("slice"), so spell the URL and layout out.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/slice-{ version }-{ target }{ archive-suffix }"
bin-dir = "slice-{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
